cscript_yacc.output
Terminals unused in grammar

   BOOL
   RETURN
   IMPORT
   '%'
   FUNC_CALL


State 0 conflicts: 18 shift/reduce
State 17 conflicts: 18 shift/reduce
State 20 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce, 5 reduce/reduce
State 48 conflicts: 3 shift/reduce
State 49 conflicts: 3 shift/reduce
State 50 conflicts: 3 shift/reduce
State 51 conflicts: 3 shift/reduce
State 52 conflicts: 3 shift/reduce
State 102 conflicts: 3 shift/reduce
State 104 conflicts: 3 shift/reduce
State 105 conflicts: 3 shift/reduce
State 106 conflicts: 3 shift/reduce
State 107 conflicts: 3 shift/reduce
State 108 conflicts: 3 shift/reduce
State 109 conflicts: 3 shift/reduce
State 110 conflicts: 3 shift/reduce
State 111 conflicts: 3 shift/reduce
State 112 conflicts: 3 shift/reduce
State 113 conflicts: 3 shift/reduce
State 114 conflicts: 3 shift/reduce
State 115 conflicts: 3 shift/reduce
State 125 conflicts: 4 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 139 conflicts: 3 shift/reduce


Grammar

    0 $accept: main_reg $end

    1 main_reg: /* empty */
    2         | stmt
    3         | main_reg stmt

    4 block: '{' stmt_list '}'

    5 stmt_list: /* empty */
    6          | stmt
    7          | stmt_list stmt

    8 block_stmt: block
    9           | stmt

   10 number: INTNUM
   11       | FLTNUM

   12 string: STRING

   13 asgn_exp: name ASSIGNMENT exp

   14 if_stmt: IF '(' exp ')' block_stmt
   15        | IF '(' exp ')' block_stmt ELSE block_stmt

   16 unless_stmt: UNLESS '(' exp ')' block_stmt
   17            | UNLESS '(' exp ')' block_stmt ELSE block_stmt

   18 while_stmt: WHILE '(' exp ')' block_stmt
   19           | DO block_stmt WHILE '(' exp ')' ';'

   20 for_stmt: FOR '(' smpl_stmt ';' exp ';' smpl_stmt ')' block_stmt
   21         | FOR '(' name IN exp ')' block_stmt

   22 array: '[' array_list ']'

   23 array_list: /* empty */
   24           | array_item
   25           | array_list ',' array_item

   26 array_item: exp

   27 hash: '[' hash_list ']'

   28 hash_list: hash_item
   29          | hash_list hash_item

   30 hash_item: hash_key ':' exp

   31 hash_key: exp

   32 func_call: name '(' arg_list ')'
   33          | block '(' arg_list ')'

   34 arg_list: /* empty */
   35         | exp
   36         | arg_list ',' exp

   37 arith_exp: exp '+' exp
   38          | exp '-' exp
   39          | exp '*' exp
   40          | exp '/' exp
   41          | INCREASE exp
   42          | DECREASE exp
   43          | exp INCREASE
   44          | exp DECREASE
   45          | '-' exp
   46          | '+' exp

   47 logi_exp: exp RELATION exp
   48         | exp EQUALITY exp
   49         | '!' exp
   50         | exp LOGIAND exp
   51         | exp LOGIOR exp

   52 bit_exp: exp SHIFT exp
   53        | exp '&' exp
   54        | exp '^' exp
   55        | exp '|' exp

   56 cond_op_exp: exp '?' exp ':' exp

   57 comma_exp: '(' comma_list ',' exp ')'

   58 comma_list: exp
   59           | comma_list ',' exp

   60 scalar: name
   61       | string
   62       | number
   63       | block

   64 name: NAME

   65 exp: func_call
   66    | asgn_exp
   67    | arith_exp
   68    | logi_exp
   69    | bit_exp
   70    | cond_op_exp
   71    | scalar
   72    | array
   73    | hash
   74    | comma_exp
   75    | '(' exp ')'

   76 smpl_stmt: exp

   77 stmt: ';'
   78     | smpl_stmt ';'
   79     | if_stmt
   80     | unless_stmt
   81     | while_stmt
   82     | for_stmt


Terminals, with rules where they appear

$end (0) 0
'!' (33) 49
'%' (37)
'&' (38) 53
'(' (40) 14 15 16 17 18 19 20 21 32 33 57 75
')' (41) 14 15 16 17 18 19 20 21 32 33 57 75
'*' (42) 39
'+' (43) 37 46
',' (44) 25 36 57 59
'-' (45) 38 45
'/' (47) 40
':' (58) 30 56
';' (59) 19 20 77 78
'?' (63) 56
'[' (91) 22 27
']' (93) 22 27
'^' (94) 54
'{' (123) 4
'|' (124) 55
'}' (125) 4
error (256)
INTNUM (258) 10
FLTNUM (259) 11
STRING (260) 12
NAME (261) 64
EQUALITY (262) 48
RELATION (263) 47
ASSIGNMENT (264) 13
SHIFT (265) 52
BOOL (266)
IF (267) 14 15
ELSE (268) 15 17
UNLESS (269) 16 17
WHILE (270) 18 19
FOR (271) 20 21
DO (272) 19
RETURN (273)
IMPORT (274)
IN (275) 21
INCREASE (276) 41 43
DECREASE (277) 42 44
LOGIAND (278) 50
LOGIOR (279) 51
COMMA (280)
COND_OP (281)
UPLUS (282)
UMINUS (283)
DEC_PRE (284)
INC_PRE (285)
DEC_POST (286)
INC_POST (287)
FUNC_CALL (288)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
main_reg (54)
    on left: 1 2 3, on right: 0 3
block (55)
    on left: 4, on right: 8 33 63
stmt_list (56)
    on left: 5 6 7, on right: 4 7
block_stmt (57)
    on left: 8 9, on right: 14 15 16 17 18 19 20 21
number (58)
    on left: 10 11, on right: 62
string (59)
    on left: 12, on right: 61
asgn_exp (60)
    on left: 13, on right: 66
if_stmt (61)
    on left: 14 15, on right: 79
unless_stmt (62)
    on left: 16 17, on right: 80
while_stmt (63)
    on left: 18 19, on right: 81
for_stmt (64)
    on left: 20 21, on right: 82
array (65)
    on left: 22, on right: 72
array_list (66)
    on left: 23 24 25, on right: 22 25
array_item (67)
    on left: 26, on right: 24 25
hash (68)
    on left: 27, on right: 73
hash_list (69)
    on left: 28 29, on right: 27 29
hash_item (70)
    on left: 30, on right: 28 29
hash_key (71)
    on left: 31, on right: 30
func_call (72)
    on left: 32 33, on right: 65
arg_list (73)
    on left: 34 35 36, on right: 32 33 36
arith_exp (74)
    on left: 37 38 39 40 41 42 43 44 45 46, on right: 67
logi_exp (75)
    on left: 47 48 49 50 51, on right: 68
bit_exp (76)
    on left: 52 53 54 55, on right: 69
cond_op_exp (77)
    on left: 56, on right: 70
comma_exp (78)
    on left: 57, on right: 74
comma_list (79)
    on left: 58 59, on right: 57 59
scalar (80)
    on left: 60 61 62 63, on right: 71
name (81)
    on left: 64, on right: 13 21 32 60
exp (82)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 13 14 15 16
    17 18 19 20 21 26 30 31 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 75 76
smpl_stmt (83)
    on left: 76, on right: 20 78
stmt (84)
    on left: 77 78 79 80 81 82, on right: 2 3 6 7 9


state 0

    0 $accept: . main_reg $end

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    IF        shift, and go to state 5
    UNLESS    shift, and go to state 6
    WHILE     shift, and go to state 7
    FOR       shift, and go to state 8
    DO        shift, and go to state 9
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17
    ';'       shift, and go to state 18

    INTNUM    [reduce using rule 1 (main_reg)]
    FLTNUM    [reduce using rule 1 (main_reg)]
    STRING    [reduce using rule 1 (main_reg)]
    NAME      [reduce using rule 1 (main_reg)]
    IF        [reduce using rule 1 (main_reg)]
    UNLESS    [reduce using rule 1 (main_reg)]
    WHILE     [reduce using rule 1 (main_reg)]
    FOR       [reduce using rule 1 (main_reg)]
    DO        [reduce using rule 1 (main_reg)]
    INCREASE  [reduce using rule 1 (main_reg)]
    DECREASE  [reduce using rule 1 (main_reg)]
    '+'       [reduce using rule 1 (main_reg)]
    '-'       [reduce using rule 1 (main_reg)]
    '!'       [reduce using rule 1 (main_reg)]
    '['       [reduce using rule 1 (main_reg)]
    '('       [reduce using rule 1 (main_reg)]
    '{'       [reduce using rule 1 (main_reg)]
    ';'       [reduce using rule 1 (main_reg)]
    $default  reduce using rule 1 (main_reg)

    main_reg     go to state 19
    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    if_stmt      go to state 24
    unless_stmt  go to state 25
    while_stmt   go to state 26
    for_stmt     go to state 27
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 38
    smpl_stmt    go to state 39
    stmt         go to state 40


state 1

   10 number: INTNUM .

    $default  reduce using rule 10 (number)


state 2

   11 number: FLTNUM .

    $default  reduce using rule 11 (number)


state 3

   12 string: STRING .

    $default  reduce using rule 12 (string)


state 4

   64 name: NAME .

    $default  reduce using rule 64 (name)


state 5

   14 if_stmt: IF . '(' exp ')' block_stmt
   15        | IF . '(' exp ')' block_stmt ELSE block_stmt

    '('  shift, and go to state 41


state 6

   16 unless_stmt: UNLESS . '(' exp ')' block_stmt
   17            | UNLESS . '(' exp ')' block_stmt ELSE block_stmt

    '('  shift, and go to state 42


state 7

   18 while_stmt: WHILE . '(' exp ')' block_stmt

    '('  shift, and go to state 43


state 8

   20 for_stmt: FOR . '(' smpl_stmt ';' exp ';' smpl_stmt ')' block_stmt
   21         | FOR . '(' name IN exp ')' block_stmt

    '('  shift, and go to state 44


state 9

   19 while_stmt: DO . block_stmt WHILE '(' exp ')' ';'

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    IF        shift, and go to state 5
    UNLESS    shift, and go to state 6
    WHILE     shift, and go to state 7
    FOR       shift, and go to state 8
    DO        shift, and go to state 9
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17
    ';'       shift, and go to state 18

    block        go to state 45
    block_stmt   go to state 46
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    if_stmt      go to state 24
    unless_stmt  go to state 25
    while_stmt   go to state 26
    for_stmt     go to state 27
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 38
    smpl_stmt    go to state 39
    stmt         go to state 47


state 10

   41 arith_exp: INCREASE . exp

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 48


state 11

   42 arith_exp: DECREASE . exp

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 49


state 12

   46 arith_exp: '+' . exp

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 50


state 13

   45 arith_exp: '-' . exp

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 51


state 14

   49 logi_exp: '!' . exp

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 52


state 15

   22 array: '[' . array_list ']'
   27 hash: '[' . hash_list ']'

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    $default  reduce using rule 23 (array_list)

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    array        go to state 28
    array_list   go to state 53
    array_item   go to state 54
    hash         go to state 29
    hash_list    go to state 55
    hash_item    go to state 56
    hash_key     go to state 57
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 58


state 16

   57 comma_exp: '(' . comma_list ',' exp ')'
   75 exp: '(' . exp ')'

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    comma_list   go to state 59
    scalar       go to state 36
    name         go to state 37
    exp          go to state 60


state 17

    4 block: '{' . stmt_list '}'

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    IF        shift, and go to state 5
    UNLESS    shift, and go to state 6
    WHILE     shift, and go to state 7
    FOR       shift, and go to state 8
    DO        shift, and go to state 9
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17
    ';'       shift, and go to state 18

    INTNUM    [reduce using rule 5 (stmt_list)]
    FLTNUM    [reduce using rule 5 (stmt_list)]
    STRING    [reduce using rule 5 (stmt_list)]
    NAME      [reduce using rule 5 (stmt_list)]
    IF        [reduce using rule 5 (stmt_list)]
    UNLESS    [reduce using rule 5 (stmt_list)]
    WHILE     [reduce using rule 5 (stmt_list)]
    FOR       [reduce using rule 5 (stmt_list)]
    DO        [reduce using rule 5 (stmt_list)]
    INCREASE  [reduce using rule 5 (stmt_list)]
    DECREASE  [reduce using rule 5 (stmt_list)]
    '+'       [reduce using rule 5 (stmt_list)]
    '-'       [reduce using rule 5 (stmt_list)]
    '!'       [reduce using rule 5 (stmt_list)]
    '['       [reduce using rule 5 (stmt_list)]
    '('       [reduce using rule 5 (stmt_list)]
    '{'       [reduce using rule 5 (stmt_list)]
    ';'       [reduce using rule 5 (stmt_list)]
    $default  reduce using rule 5 (stmt_list)

    block        go to state 20
    stmt_list    go to state 61
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    if_stmt      go to state 24
    unless_stmt  go to state 25
    while_stmt   go to state 26
    for_stmt     go to state 27
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 38
    smpl_stmt    go to state 39
    stmt         go to state 62


state 18

   77 stmt: ';' .

    $default  reduce using rule 77 (stmt)


state 19

    0 $accept: main_reg . $end
    3 main_reg: main_reg . stmt

    $end      shift, and go to state 63
    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    IF        shift, and go to state 5
    UNLESS    shift, and go to state 6
    WHILE     shift, and go to state 7
    FOR       shift, and go to state 8
    DO        shift, and go to state 9
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17
    ';'       shift, and go to state 18

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    if_stmt      go to state 24
    unless_stmt  go to state 25
    while_stmt   go to state 26
    for_stmt     go to state 27
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 38
    smpl_stmt    go to state 39
    stmt         go to state 64


state 20

   33 func_call: block . '(' arg_list ')'
   63 scalar: block .

    '('  shift, and go to state 65

    '('       [reduce using rule 63 (scalar)]
    $default  reduce using rule 63 (scalar)


state 21

   62 scalar: number .

    $default  reduce using rule 62 (scalar)


state 22

   61 scalar: string .

    $default  reduce using rule 61 (scalar)


state 23

   66 exp: asgn_exp .

    $default  reduce using rule 66 (exp)


state 24

   79 stmt: if_stmt .

    $default  reduce using rule 79 (stmt)


state 25

   80 stmt: unless_stmt .

    $default  reduce using rule 80 (stmt)


state 26

   81 stmt: while_stmt .

    $default  reduce using rule 81 (stmt)


state 27

   82 stmt: for_stmt .

    $default  reduce using rule 82 (stmt)


state 28

   72 exp: array .

    $default  reduce using rule 72 (exp)


state 29

   73 exp: hash .

    $default  reduce using rule 73 (exp)


state 30

   65 exp: func_call .

    $default  reduce using rule 65 (exp)


state 31

   67 exp: arith_exp .

    $default  reduce using rule 67 (exp)


state 32

   68 exp: logi_exp .

    $default  reduce using rule 68 (exp)


state 33

   69 exp: bit_exp .

    $default  reduce using rule 69 (exp)


state 34

   70 exp: cond_op_exp .

    $default  reduce using rule 70 (exp)


state 35

   74 exp: comma_exp .

    $default  reduce using rule 74 (exp)


state 36

   71 exp: scalar .

    $default  reduce using rule 71 (exp)


state 37

   13 asgn_exp: name . ASSIGNMENT exp
   32 func_call: name . '(' arg_list ')'
   60 scalar: name .

    ASSIGNMENT  shift, and go to state 66
    '('         shift, and go to state 67

    '('       [reduce using rule 60 (scalar)]
    $default  reduce using rule 60 (scalar)


state 38

   37 arith_exp: exp . '+' exp
   38          | exp . '-' exp
   39          | exp . '*' exp
   40          | exp . '/' exp
   43          | exp . INCREASE
   44          | exp . DECREASE
   47 logi_exp: exp . RELATION exp
   48         | exp . EQUALITY exp
   50         | exp . LOGIAND exp
   51         | exp . LOGIOR exp
   52 bit_exp: exp . SHIFT exp
   53        | exp . '&' exp
   54        | exp . '^' exp
   55        | exp . '|' exp
   56 cond_op_exp: exp . '?' exp ':' exp
   76 smpl_stmt: exp .

    EQUALITY  shift, and go to state 68
    RELATION  shift, and go to state 69
    SHIFT     shift, and go to state 70
    INCREASE  shift, and go to state 71
    DECREASE  shift, and go to state 72
    LOGIAND   shift, and go to state 73
    LOGIOR    shift, and go to state 74
    '|'       shift, and go to state 75
    '^'       shift, and go to state 76
    '&'       shift, and go to state 77
    '+'       shift, and go to state 78
    '-'       shift, and go to state 79
    '*'       shift, and go to state 80
    '/'       shift, and go to state 81
    '?'       shift, and go to state 82

    $default  reduce using rule 76 (smpl_stmt)


state 39

   78 stmt: smpl_stmt . ';'

    ';'  shift, and go to state 83


state 40

    2 main_reg: stmt .

    $default  reduce using rule 2 (main_reg)


state 41

   14 if_stmt: IF '(' . exp ')' block_stmt
   15        | IF '(' . exp ')' block_stmt ELSE block_stmt

    INTNUM    shift, and go to state 1
    FLTNUM    shift, and go to state 2
    STRING    shift, and go to state 3
    NAME      shift, and go to state 4
    INCREASE  shift, and go to state 10
    DECREASE  shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    '!'       shift, and go to state 14
    '['       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    block        go to state 20
    number       go to state 21
    string       go to state 22
    asgn_exp     go to state 23
    array        go to state 28
    hash         go to state 29
    func_call    go to state 30
    arith_exp    go to state 31
    logi_exp     go to state 32
    bit_exp      go to state 33
    cond_op_exp  go to state 34
    comma_exp    go to state 35
    scalar       go to state 36
    name         go to state 37
    exp          go to state 84


state 42

   16 unless_stmt: UNLESS '(' . exp ')' block_stmt
   17            | UNLESS '(' . exp ')' block_stmt ELSE block_stmt
